--- a/front/static/manifest.json
+++ b/front/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "front",
-  "short_name": "front",
+  "name": "bell",
+  "short_name": "bell",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
