--- a/front/package.json
+++ b/front/package.json
@@ -14,10 +14,13 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "chokidar": "^2.0.2",
+    "jade": "^1.11.0",
     "vue": "^2.5.2",
     "vue-http": "^2.0.2",
     "vue-resource": "^1.3.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-upload-component": "^2.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
