--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.0.0-beta.5.2",
     "scss": "^0.2.4",
     "vue": "^2.5.2",
+    "vue-bootstrap-toggle": "^1.1.1",
     "vue-http": "^2.0.2",
     "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1",
