--- a/front/package.json
+++ b/front/package.json
@@ -14,88 +14,88 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "chokidar": "^2.0.3",
+    "chokidar": "^2.0.4",
     "jade": "^1.11.0",
-    "sass": "^1.0.0-beta.5.2",
+    "sass": "^1.14.3",
     "scss": "^0.2.4",
-    "vue": "^2.5.2",
-    "vue-bootstrap-toggle": "^1.1.1",
-    "vue-http": "^2.0.2",
-    "vue-resource": "^1.3.6",
+    "vue": "^2.5.17",
+    "vue-bootstrap-toggle": "^1.1.4",
+    "vue-http": "^2.0.5",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-upload-component": "^2.8.3"
+    "vue-upload-component": "^2.8.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.5",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "chalk": "^2.1.0",
-    "chromedriver": "^2.33.1",
+    "chai": "^4.2.0",
+    "chalk": "^2.4.1",
+    "chromedriver": "^2.43.1",
     "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.1.1",
-    "cross-env": "^5.0.5",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "cross-spawn": "^5.1.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "eslint": "^4.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.5",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.5",
     "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-phantomjs-shim": "^1.5.0",
-    "karma-sinon-chai": "^1.3.2",
+    "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "mocha": "^4.0.1",
-    "nightwatch": "^1.0.6",
-    "node-sass": "^4.9.0",
-    "opn": "^5.1.0",
+    "nightwatch": "^1.0.11",
+    "node-sass": "^4.9.4",
+    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "selenium-server": "^3.6.0",
-    "semver": "^5.4.1",
+    "sass-loader": "^6.0.7",
+    "selenium-server": "^3.14.0",
+    "semver": "^5.6.0",
     "shelljs": "^0.7.8",
-    "sinon": "^4.0.1",
+    "sinon": "^4.5.0",
     "sinon-chai": "^2.14.0",
-    "style-loader": "^0.20.2",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-es": "^3.1.3",
+    "style-loader": "^0.20.3",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "uglify-es": "^3.3.9",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.1.4"
   },
   "engines": {
     "node": ">= 4.0.0",
